<resources>
    <string name="app_name">ContinentalRecipesUsingNavGraph</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes">Recipes</string>
    <string name="favorite">Favorite</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="category_title">Category</string>
    <string name="rate_uri"><![CDATA[https://play.google.com/store/apps/details?id=com.buzzfeed.tasty&hl=en_US&gl=US]]></string>
    <string name="qr_scan">QR Scan</string>
    <string name="qr_error_message">Invalid barcode, please try with different barcode</string>
    <string name="reticle_view_content_description">Place the barcode under your device, slowly move the device towards or away the barcode until you hear an audio confirmation</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="save_username">Save username</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="new_member_sign_up">New member?</string>
    <string name="sign_up">" Sign up"</string>
    <string name="register_greeting">Let\'s get you started</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="log_in">" Log in"</string>
    <string name="sign_in">Sign In</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email_and_we_ll_send_you_a_link_to_reset_your_password">Enter your email and we\'ll send you a link to reset your password.</string>
    <string name="submit">Submit</string>
    <string name="go_back_home">Go back home</string>
    <string name="reset_password_alert">Please check your email address for instructions to reset your password</string>
    <string name="log_out">Log out</string>
    <string name="session_timeout_title">Your session is about to expire.</string>
    <string name="session_timeout_message">"You've been inactive for a while. For your security, we'll automatically sign you out in approximately 1 minute.\n\nChoose \"Stay signed in\" to continue or \"Sign out\" if you're done."</string>
    <string name="time_out_count_down">Time Out: 60s</string>
</resources>