<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/primary">
        <item
            android:id="@+id/favorite_menu_option"
            android:icon="@drawable/ic_dense_favorite"
            android:title="@string/favorite" />
    </group>

    <group>
        <item
            android:id="@+id/rate_menu_option"
            android:icon="@drawable/ic_rate"
            android:title="@string/rate" />

        <item
            android:id="@+id/share_menu_option"
            android:icon="@drawable/ic_share"
            android:title="@string/share" />

        <item
            android:id="@+id/about_menu_option"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />

        <item
            android:id="@+id/log_out_menu_option"
            android:icon="@drawable/ic_log_out"
            android:title="@string/log_out" />
    </group>

</menu>