<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.authentication.LoginFragment">


    <TextView
        android:id="@+id/reset_password_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:contentDescription="@null"
        android:gravity="center"
        android:text="@string/enter_your_email_and_we_ll_send_you_a_link_to_reset_your_password"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_text_margin"
        android:layout_marginTop="@dimen/username_edit_text_top_margin"
        android:layout_marginEnd="@dimen/edit_text_margin"
        android:autofillHints="name"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_password_instruction" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:enabled="false"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />

</androidx.constraintlayout.widget.ConstraintLayout>
